Update airport codes exploration

--- a/data_exploration/Data exploration - Airport codes.ipynb
+++ b/data_exploration/Data exploration - Airport codes.ipynb
@@ -20,6 +20,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Airport codes\n",
+    "This dataset contains a worldwide collection of airports, with their different identification codes, among other data.\n",
+    "\n",
+    "Origin: https://datahub.io/core/airport-codes#data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data info"
    ]
   },
@@ -459,14 +469,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All: 46002\n",
-      "Non null: 21522\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -475,6 +477,14 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  return super().rename(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All: 69003\n",
+      "Non null: 28380\n"
      ]
     },
     {
@@ -599,13 +609,17 @@
     }
    ],
    "source": [
+    "us_airports_by_ident = us_airports[['state', 'ident', 'latitude', 'longitude']]\n",
+    "us_airports_by_ident.rename(columns={'ident': 'airport_code'}, inplace=True)\n",
+    "\n",
     "us_airports_by_iata = us_airports[['state', 'iata_code', 'latitude', 'longitude']]\n",
     "us_airports_by_iata.rename(columns={'iata_code': 'airport_code'}, inplace=True)\n",
     "\n",
     "us_airports_by_local_code = us_airports[['state', 'local_code', 'latitude', 'longitude']]\n",
     "us_airports_by_local_code.rename(columns={'local_code': 'airport_code'}, inplace=True)\n",
     "\n",
-    "us_airports_all = us_airports_by_iata.append(us_airports_by_local_code)\n",
+    "us_airports_all = us_airports_by_ident.append(us_airports_by_iata)\n",
+    "us_airports_all = us_airports_all.append(us_airports_by_local_code)\n",
     "\n",
     "print(f\"All: {us_airports_all.shape[0]}\")\n",
     "us_airports_all = us_airports_all[us_airports_all['airport_code'].notnull()]\n",
