Update us demographics exploration

--- a/data_exploration/Data exploration - US cities demographics.ipynb
+++ b/data_exploration/Data exploration - US cities demographics.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -48,20 +50,18 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2891 entries, 0 to 2890\n",
       "Data columns (total 12 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   City                    2891 non-null   object \n",
-      " 1   State                   2891 non-null   object \n",
-      " 2   Median Age              2891 non-null   float64\n",
-      " 3   Male Population         2888 non-null   float64\n",
-      " 4   Female Population       2888 non-null   float64\n",
-      " 5   Total Population        2891 non-null   int64  \n",
-      " 6   Number of Veterans      2878 non-null   float64\n",
-      " 7   Foreign-born            2878 non-null   float64\n",
-      " 8   Average Household Size  2875 non-null   float64\n",
-      " 9   State Code              2891 non-null   object \n",
-      " 10  Race                    2891 non-null   object \n",
-      " 11  Count                   2891 non-null   int64  \n",
+      "City                      2891 non-null object\n",
+      "State                     2891 non-null object\n",
+      "Median Age                2891 non-null float64\n",
+      "Male Population           2888 non-null float64\n",
+      "Female Population         2888 non-null float64\n",
+      "Total Population          2891 non-null int64\n",
+      "Number of Veterans        2878 non-null float64\n",
+      "Foreign-born              2878 non-null float64\n",
+      "Average Household Size    2875 non-null float64\n",
+      "State Code                2891 non-null object\n",
+      "Race                      2891 non-null object\n",
+      "Count                     2891 non-null int64\n",
       "dtypes: float64(6), int64(2), object(4)\n",
       "memory usage: 225.9+ KB\n"
      ]
@@ -321,8 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['race_population_percentage'] = df['Count'] / df['Total Population']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -429,7 +440,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>31753718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Texas</td>\n",
+       "      <td>20029645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>11377068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Florida</td>\n",
+       "      <td>8664477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>5754881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>5375987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>3587084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>3387940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>2832381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>2781296</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             State     Count\n",
+       "4       California  31753718\n",
+       "44           Texas  20029645\n",
+       "32        New York  11377068\n",
+       "9          Florida   8664477\n",
+       "2          Arizona   5754881\n",
+       "13        Illinois   5375987\n",
+       "5         Colorado   3587084\n",
+       "33  North Carolina   3387940\n",
+       "47      Washington   2832381\n",
+       "28          Nevada   2781296"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('State', as_index=False)['Count'].sum().sort_values('Count', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>9856464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Texas</td>\n",
+       "      <td>6311431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>2730185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Florida</td>\n",
+       "      <td>1942022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>1508157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>1215659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>977192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>703722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>689798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>600437</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          State    Count\n",
+       "4    California  9856464\n",
+       "44        Texas  6311431\n",
+       "32     New York  2730185\n",
+       "9       Florida  1942022\n",
+       "2       Arizona  1508157\n",
+       "13     Illinois  1215659\n",
+       "39  Puerto Rico   977192\n",
+       "5      Colorado   703722\n",
+       "28       Nevada   689798\n",
+       "30   New Jersey   600437"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hispanic_df = df[df.Race == 'Hispanic or Latino']\n",
+    "hispanic_df.groupby('State', as_index=False)['Count'].sum().sort_values('Count', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -454,85 +686,85 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>State</th>\n",
-       "      <th>Total Population</th>\n",
+       "      <th>race_population_percentage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>California</td>\n",
-       "      <td>123444353</td>\n",
+       "      <td>51.801822</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>Texas</td>\n",
-       "      <td>70553853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>New York</td>\n",
-       "      <td>49002055</td>\n",
+       "      <td>21.924350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Florida</td>\n",
-       "      <td>32306132</td>\n",
+       "      <td>13.639913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>22514390</td>\n",
+       "      <th>39</th>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>6.919641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>5.233177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Arizona</td>\n",
-       "      <td>22497710</td>\n",
+       "      <td>4.603583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>North Carolina</td>\n",
-       "      <td>15300995</td>\n",
+       "      <th>13</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>4.324005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Colorado</td>\n",
-       "      <td>14678345</td>\n",
+       "      <td>3.552763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>3.069535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
        "      <td>Washington</td>\n",
-       "      <td>12500535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>12096550</td>\n",
+       "      <td>2.841260</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             State  Total Population\n",
-       "4       California         123444353\n",
-       "44           Texas          70553853\n",
-       "32        New York          49002055\n",
-       "9          Florida          32306132\n",
-       "13        Illinois          22514390\n",
-       "2          Arizona          22497710\n",
-       "33  North Carolina          15300995\n",
-       "5         Colorado          14678345\n",
-       "47      Washington          12500535\n",
-       "35            Ohio          12096550"
+       "            State  race_population_percentage\n",
+       "4      California                   51.801822\n",
+       "44          Texas                   21.924350\n",
+       "9         Florida                   13.639913\n",
+       "39    Puerto Rico                    6.919641\n",
+       "30     New Jersey                    5.233177\n",
+       "2         Arizona                    4.603583\n",
+       "13       Illinois                    4.324005\n",
+       "5        Colorado                    3.552763\n",
+       "21  Massachusetts                    3.069535\n",
+       "47     Washington                    2.841260"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('State', as_index=False)['Total Population'].sum().sort_values('Total Population', ascending=False).head(10)"
+    "hispanic_df.groupby('State', as_index=False)['race_population_percentage'].sum().sort_values('race_population_percentage', ascending=False).head(10)"
    ]
   },
   {
